* Added full image options when adding content from media library * Added german translation (Contributor: Christian Foellmann) * Overall Javascript code optimization * Better Javascript compression * Fixed editor background color * Fixed compatibility issue with "WP Page Widget" plugin * Fixed issue about editor partially hidden on narrow screens
git-svn-id: http://plugins.svn.wordpress.org/black-studio-tinymce-widget/trunk@614524 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/black-studio-tinymce-widget.css
+++ b/black-studio-tinymce-widget.css
@@ -9,6 +9,7 @@
 }
 
 .editor_container {
+	background-color: #FFF;
 	border-color: #CCC #CCC #DFDFDF;
 	border-style: solid;
 	border-width: 1px;
